--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
         {% endblock %}
     </head>
     <body>
-        <div id="content">{% block content %}{% endblock %}</div>
+        <div id="content">
+            {% block content %}{% endblock %}
+        </div>
         <div id="footer">
             {% block footer %}
                 &copy; Copyright 2011 by <a href="http://domain.invalid/">you</a>.
