--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Index{% endblock %}
+{% block title %}Login{% endblock %}
 {% block content %}
-    <h1>Index</h1>
-    <p class="important">
-        Welcome on my awesome homepage.
-    </p>
+    <h1>Login</h1>
+    <form action="/" method="POST">
+        Login: <input type="text" name="login" /><br />
+        Password: <input type="password" name="password" /><br />
+        <input type="Submit" name="Submit" />
+    </form>
 {% endblock %}
