--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         {% block head %}
-            <link rel="stylesheet" href="style.css" />
             <title>{% block title %}{% endblock %} - My Webpage</title>
         {% endblock %}
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     </head>
     <body>
         <div id="content">
+            {% if logged_in %}
+                <a href="/admin/logout">Logout</a>
+            {% endif %}
             {% block content %}{% endblock %}
         </div>
         <div id="footer">
