--- a/templates/login.html
+++ b/templates/login.html
@@ -2,10 +2,35 @@
 
 {% block title %}Login{% endblock %}
 {% block content %}
-    <h1>Login</h1>
-    <form action="/" method="POST">
-        Login: <input type="text" name="login" /><br />
-        Password: <input type="password" name="password" /><br />
-        <input type="Submit" name="Submit" />
-    </form>
+<script>
+    $(document).ready(function() {
+        $('form').submit(function() {
+            $.ajax({
+                method: "POST",
+                url: 'http://slim-app.lndo.site/token',
+                username: $("#login").val(),
+                password: $("#pass").val()
+            }).done(function(res) {
+                document.cookie = "token=" + res.token + "; max-age=" + 3600;
+                $("#error_msg").html("");
+                document.location='http://slim-app.lndo.site/api/categories/create';
+            }).fail(function(result) {
+                $("#error_msg").html("Error logging in: "+result.statusText);
+            });
+            return false;
+        });
+    });
+    </script>
+    {% if logged_in %}
+        <h1>Logged in</h1>
+        Logged in
+    {% else %}
+        <h1>Login</h1>
+        <div id="error_msg" style="color: red"></div>
+        <form method="POST">
+            Login: <input type="text" name="login" id="login" value="admin" /><br />
+            Password: <input type="password" name="password" id="pass" value="zsZ@aVn6Tq#a\e(" /><br />
+            <input type="Submit" name="Submit" />
+        </form>
+    {% endif %}
 {% endblock %}
