isLoggeIn twig extension

--- a/templates/logout.html
+++ b/templates/logout.html
@@ -6,6 +6,6 @@
         <h1>Logged in</h1>
         Logged in
     {% else %}
-        You've been logged out. Go back to login<a href="/admin">login</a> or <a href="/">homepage</a>.
+        You've been logged out. Go back to <a href="/admin">login</a> or <a href="/">home</a> page.
     {% endif %}
 {% endblock %}
