--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="content" class="container">
-            {% if logged_in %}
+            {% if isLoggedIn() %}
                 <a href="/admin/logout">Logout</a>
             {% endif %}
             {% block content %}{% endblock %}
