--- a/templates/login.html
+++ b/templates/login.html
@@ -2,26 +2,26 @@
 
 {% block title %}Login{% endblock %}
 {% block content %}
-<script>
-    $(document).ready(function() {
-        $('form').submit(function() {
-            $.ajax({
-                method: "POST",
-                url: 'http://slim-app.lndo.site/token',
-                username: $("#login").val(),
-                password: $("#pass").val()
-            }).done(function(res) {
-                document.cookie = "token=" + res.token + "; max-age=" + 3600;
-                $("#error_msg").html("");
-                document.location='http://slim-app.lndo.site/admin';
-            }).fail(function(result) {
-                $("#error_msg").html("Error logging in: "+result.statusText);
+    <script>
+        $(document).ready(function() {
+            $('form').submit(function() {
+                $.ajax({
+                    method: "POST",
+                    url: 'http://slim-app.lndo.site/token',
+                    username: $("#login").val(),
+                    password: $("#pass").val()
+                }).done(function(res) {
+                    document.cookie = "token=" + res.token + "; max-age=" + res.expires;
+                    $("#error_msg").html("");
+                    document.location='http://slim-app.lndo.site/admin';
+                }).fail(function(result) {
+                    $("#error_msg").html("Error logging in: " + result.statusText);
+                });
+                return false;
             });
-            return false;
         });
-    });
     </script>
-    {% if logged_in %}
+    {% if isLoggedIn() %}
         <h1>Logged in</h1>
         Logged in
         <ul>
