--- a/templates/login.html
+++ b/templates/login.html
@@ -21,20 +21,19 @@
             });
         });
     </script>
-    {% if isLoggedIn() %}
-        <h1>Logged in</h1>
-        Logged in
-        <ul>
-            <li><a href="/api/categories/create">Add category</a></li>
-            <li><a href="/api/icons/create">Add icon</a></li>
-        </ul>
-    {% else %}
+    {% if not isLoggedIn() %}
         <h1>Login</h1>
         <div id="error_msg" style="color: red"></div>
         <form method="POST">
-            Login: <input type="text" name="login" id="login" value="admin" /><br />
-            Password: <input type="password" name="password" id="pass" value="zsZ@aVn6Tq#a\e(" /><br />
-            <input type="Submit" name="Submit" />
+            <div class="form-group">
+                <label for="login">Login</label>
+                <input type="text" class="form-control" id="login" name="login" value="admin"/>
+            </div>
+            <div class="form-group">
+                <label for="pass">Password</label>
+                <input type="password" class="form-control" id="pass" name="pass" value="zsZ@aVn6Tq#a\e("/>
+            </div>
+            <button type="submit" class="btn btn-primary" value="Submit">Log in</button>
         </form>
     {% endif %}
 {% endblock %}
