--- a/templates/logout.html
+++ b/templates/logout.html
@@ -2,10 +2,7 @@
 
 {% block title %}Login{% endblock %}
 {% block content %}
-    {% if logged_in %}
-        <h1>Logged in</h1>
-        Logged in
-    {% else %}
+    {% if not isLoggedIn() %}
         You've been logged out. Go back to <a href="/admin">login</a> or <a href="/">home</a> page.
     {% endif %}
 {% endblock %}
