--- a/templates/login.html
+++ b/templates/login.html
@@ -35,5 +35,8 @@
             </div>
             <button type="submit" class="btn btn-primary" value="Submit">Log in</button>
         </form>
+    {% else %}
+        <p>Welcome!</p>
+        <p>You are logged in.</p>
     {% endif %}
 {% endblock %}
