--- a/templates/login.html
+++ b/templates/login.html
@@ -22,11 +22,10 @@
         });
     </script>
     {% if isLoggedIn() %}
-        <h1>Logged in</h1>
-        Logged in
-        <ul>
-            <li><a href="/api/categories/create">Add category</a></li>
-            <li><a href="/api/icons/create">Add icon</a></li>
+        <h3 class="mt-4">Create new:</h3>
+        <ul class="list-group">
+            <li class="list-group-item"><a href="/api/categories/create">Category</a></li>
+            <li class="list-group-item"><a href="/api/icons/create">Icon</a></li>
         </ul>
     {% else %}
         <h1>Login</h1>
