--- a/templates/login.html
+++ b/templates/login.html
@@ -27,11 +27,11 @@
         <ul class="list-group w-25 list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
               <a href="/api/categories/create" class="text-dark">Category</a>
-              <span class="badge badge-primary badge-pill">2</span>
+              <span class="badge badge-danger badge-pill">2</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
                 <a href="/api/icons/create" class="text-dark">Icon</a>
-                <span class="badge badge-primary badge-pill">15</span>
+                <span class="badge badge-danger badge-pill">15</span>
             </li>
         </ul>
 
