Table template, show all icons and categories

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -4,6 +4,8 @@
             <img src="/logo.svg" width="40" alt="" loading="lazy">
         </a>
         <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="/admin/categories">All categories</a></li>
+            <li class="nav-item"><a class="nav-link" href="/admin/icons">All icons</a></li>
             <li class="nav-item"><a class="nav-link" href="/api/categories/create">Add category</a></li>
             <li class="nav-item"><a class="nav-link" href="/api/icons/create">Add icon</a></li>
         </ul>
