--- a/templates/table.html
+++ b/templates/table.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
-    <h3 class="mt-4">Create icon:</h3>
+    <h3 class="mt-4">{{ title }}:</h3>
     <div>
         <table class="table table-striped">
             <thead>
