--- a/templates/table.html
+++ b/templates/table.html
@@ -45,7 +45,7 @@
                         {% for key, value in item %}
                             <td>
                                 {% if key == 'src' %}
-                                <div style="width: 50px">{{ value | raw }}</div>
+                                    <div style="width: 50px"><img src="/icon/{{ item.id }}" /></div>
                                 {% else %}
                                     {{ value }}
                                 {% endif %}
