--- a/templates/login.html
+++ b/templates/login.html
@@ -41,7 +41,7 @@
     {% else %}
         <div class="alert alert-danger  mt-5" role="alert" id="error_msg">
         </div>
-        <form method="POST" class="w-25 p-3 mt-5 mb-5">
+        <form method="POST" class="w-25 p-3 m-auto">
             <div class="form-group">
                 <label for="login">Login</label>
                 <input type="text" class="form-control" id="login" name="login" value="admin"/>
