--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -14,7 +14,7 @@
         </ul>
     </nav>
 {% else %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-danger container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger container-fluid mb-auto">
         <a class="navbar-brand" href="/admin">
             <img src="/logo.svg" width="40" alt="" loading="lazy">
         </a>
