--- a/templates/login.html
+++ b/templates/login.html
@@ -39,7 +39,7 @@
         </ul>
 
     {% else %}
-        <div class="alert alert-danger  mt-5" role="alert" id="error_msg">
+        <div class="alert alert-danger m-auto w-25" role="alert" id="error_msg">
         </div>
         <form method="POST" class="w-25 p-3 m-auto">
             <div class="form-group">
