Improvements, added update and delete forms

--- a/templates/login.html
+++ b/templates/login.html
@@ -29,11 +29,11 @@
 
         <ul class="list-group w-25 list-group-flush">
             <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
-              <a href="/api/categories/create" class="text-dark">Category</a>
+              <a href="/admin/categories/create" class="text-dark">Category</a>
               <span class="badge badge-danger badge-pill">{{ number_of_categories }}</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center list-group-item-action">
-                <a href="/api/icons/create" class="text-dark">Icon</a>
+                <a href="/admin/icons/create" class="text-dark">Icon</a>
                 <span class="badge badge-danger badge-pill">{{ number_of_icons }}</span>
             </li>
         </ul>
