--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -6,8 +6,8 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item"><a class="nav-link" href="/admin/categories">All categories</a></li>
             <li class="nav-item"><a class="nav-link" href="/admin/icons">All icons</a></li>
-            <li class="nav-item"><a class="nav-link" href="/api/categories/create">Add category</a></li>
-            <li class="nav-item"><a class="nav-link" href="/api/icons/create">Add icon</a></li>
+            <li class="nav-item"><a class="nav-link" href="/admin/categories/create">Add category</a></li>
+            <li class="nav-item"><a class="nav-link" href="/admin/icons/create">Add icon</a></li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item active"><a class="nav-link" href="/admin/logout">Logout</a></li>
